Write wav file to local server

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 	Wire
 	SPIFFS
 	x385832/EasyLogger@^1.1.4
-	moononournation/GFX Library for Arduino@^1.4.7
+	moononournation/GFX Library for Arduino@1.4.7
 	FS
 	Wifi
 	WebServer
@@ -42,3 +42,4 @@ build_src_filter =
 [env:analog-read]
 [env:touchscreen]
 [env:leds]
+[env:identify]
