--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = upload_params.ini
 
 [env]
 platform = espressif32@6.5.0
