--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
+src_dir = esp32/src
+lib_dir = esp32/lib
+include_dir = esp32/include
+test_dir = esp32/test
+data_dir = esp32/data
 extra_configs = upload_params.ini
 
 [env]
 platform = espressif32@6.5.0
 board = adafruit_qualia_s3_rgb666
 framework = arduino
-build_flags = -DCORE_DEBUG_LEVEL=5
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
 lib_deps = 
 	SPI
 	Wire
