--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,8 @@ platform = espressif32@6.5.0
 board = adafruit_qualia_s3_rgb666
 framework = arduino
 build_flags = 
+	-DUSE_ESP_IDF_LOG
+	-DTAG='"RS"'
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
 lib_deps = 
