--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,14 +32,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.35.2
+  flutter_mobx: ^2.3.0
   flutter_reactive_ble: ^5.4.0
   intl: ^0.20.2
+  mobx: ^2.5.0
   provider: ^6.1.2
 
 dev_dependencies:
+  build_runner: ^2.4.14
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
