--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,15 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  crypto: ^3.0.6
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_acrcloud: ^0.2.2
   flutter_blue_plus: ^1.35.2
   flutter_mobx: ^2.3.0
   flutter_reactive_ble: ^5.4.0
+  http: ^1.3.0
   intl: ^0.20.2
   mobx: ^2.5.0
+  path_provider: ^2.1.5
   provider: ^6.1.2
+  record: ^5.2.0
 
 dev_dependencies:
   build_runner: ^2.4.14
