--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ board = adafruit_qualia_s3_rgb666
 framework = arduino
 build_flags = 
 	-DUSE_ESP_IDF_LOG
-	-DTAG='"RS"'
+	; -DTAG='"RS"'
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
 lib_deps = 
@@ -40,7 +40,7 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.5.43
 	adafruit/Adafruit FT6206 Library @ ^1.1.0
 	adafruit/Adafruit CST8XX Library @ ^1.1.1
-	lvgl/lvgl @ ^9.2.0
+	lvgl/lvgl
 	FastLED
 build_src_filter = 
 	+<*.h>
