Updated audio and led code

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 src_dir = esp32/src
 lib_dir = esp32/lib
@@ -21,15 +22,14 @@ board = adafruit_qualia_s3_rgb666
 framework = arduino
 build_flags = 
 	-DUSE_ESP_IDF_LOG
-	; -DTAG='"RS"'
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
 lib_deps = 
 	SPI
 	Wire
 	SPIFFS
-	x385832/EasyLogger@^1.1.4
 	moononournation/GFX Library for Arduino@1.4.7
+	kosme/arduinoFFT@^2.0.4
 	FS
 	Wifi
 	WebServer
