Attempt to get screen and i2s working at same time

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ build_flags =
 	-DUSE_ESP_IDF_LOG
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
+	-I"${PROJECT_DIR}/esp32/include/screen"
+	
 lib_deps = 
 	SPI
 	Wire
@@ -43,15 +45,16 @@ lib_deps =
 	lvgl/lvgl
 	FastLED
 build_src_filter = 
-	+<*.h>
-	+<*.cpp>
-	+<*.c>
+	+<**/*.h>
+	+<**/*.cpp>
+	+<**/*.c>
 	-<main-*.cpp>
 	+<main-${PIOENV}.cpp>
 
 [env:stand]
 [env:analog-read]
 [env:touchscreen]
+[env:screen-basic]
 [env:leds]
 [env:identify]
 [env:bluetooth]
