--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,6 @@ build_flags =
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_PATH="${PROJECT_DIR}/esp32/include/lv_conf.h"
 	-I"${PROJECT_DIR}/esp32/include/screen"
-	
 lib_deps = 
 	SPI
 	Wire
@@ -44,6 +43,7 @@ lib_deps =
 	adafruit/Adafruit CST8XX Library @ ^1.1.1
 	lvgl/lvgl
 	FastLED
+	wafle/Observable @ ^1.0.0
 build_src_filter = 
 	+<**/*.h>
 	+<**/*.cpp>
